Make no-argument evaluation method use collections empty map